--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,19 @@
 {
-    "presets": [
-        [
-            "@babel/preset-env",
-            {
-                "targets": {
-                    "node": "10"
-                }
-            }
-        ],
-        "@babel/preset-react"
+  "presets": ["@babel/preset-react"],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-optional-chaining",
+    [
+      "module-resolver",
+      {
+        "root": "./"
+        // "alias": {
+        //   "~": "./",
+        //   "components": "./src/components",
+        //   "shared": "./src/shared",
+        //   "utils": "./src/utils"
+        // }
+      }
     ]
+  ]
 }
