--- a/.eslintrc
+++ b/.eslintrc
@@ -54,6 +54,7 @@
     "curly": 2,
     "eqeqeq": 2,
     "no-alert": 1,
+    "no-param-reassign": 0,
     "no-else-return": 1,
     "no-empty-function": 1,
     "no-use-before-define": [
