--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "webpack-dev-server --open --mode development --watch",
-    "prod": "webpack --mode production",
-    "build": "cross-env NODE_ENV=production && npm run prod",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --open --mode development --watch",
+    "dev": "webpack --mode development",
+    "prod": "cross-env NODE_ENV=production webpack --mode production",
+    "build": "npm run prod",
     "open-cov": "open coverage/lcov-report/index.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -50,8 +51,9 @@
     "@babel/cli": "^7.10.1",
     "@babel/core": "^7.10.2",
     "@babel/node": "^7.10.1",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.10.3",
     "@babel/plugin-transform-runtime": "^7.10.1",
-    "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
     "@babel/register": "^7.10.1",
     "@babel/runtime": "^7.10.2",
@@ -59,12 +61,12 @@
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
     "babel-plugin-istanbul": "^6.0.0",
+    "babel-plugin-module-resolver": "^4.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "codecov": "^3.7.0",
     "coveralls": "^3.1.0",
     "cross-env": "^7.0.2",
     "css-loader": "^3.6.0",
-    "dotenv-webpack": "^1.8.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.5.0",
@@ -72,8 +74,10 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-babel": "^9.0.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
     "husky": "^4.2.5",
@@ -92,6 +96,7 @@
     "sass-lint": "^1.13.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
+    "svg-url-loader": "^6.0.0",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
